--- a/slideApp/src/app/slider-mood/slider-mood.component.html
+++ b/slideApp/src/app/slider-mood/slider-mood.component.html
@@ -1,13 +1,15 @@
-<div class="fixed-sn">
-    <div class="col-lg-10 ml-auto mr-auto">
+<div class="carousel-inner">
+    <div class="carousel slide">
         <mdb-carousel [interval]="myInterval" [noWrap]="noWrapSlides" [(activeSlide)]="activeSlideIndex" (activeSlideChange)="activeSlideChange()">
           <mdb-slide *ngFor="let slide of slides; let index=index">
-            <img [src]="slide.image">
+            <img class="d-block w-100" [src]="slide.image">
             <div class="carousel-caption">
+                <h1 class ="centertext">{{slide.text}}</h1>
               <h4>Slide {{index}}</h4>
-              <p>{{slide.text}}</p>
+              
             </div>
+            
           </mdb-slide>
         </mdb-carousel>
     </div>
-</div>
+  </div>
